# AI-Assistant

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  gemini.md  plan-langGraphImplementation.prompt.md  pyproject.toml  setup-guide.md  soul.md
.github/: copilot-instructions.md
langgraph_workflows/: pyproject.toml
langgraph_workflows/artifacts/94cb1eeb/0/: search.md
langgraph_workflows/artifacts/a60955e3/0/: analysis.md
langgraph_workflows/artifacts/a60955e3/1/: search.md
langgraph_workflows/artifacts/archive/79ded2af/0/: analysis.json  report.md
langgraph_workflows/artifacts/archive/79ded2af/1/: analysis.json  report.md  search.md
langgraph_workflows/artifacts/archive/79ded2af/2/: search.md
langgraph_workflows/artifacts/archive/79ded2af/3/: search.md
langgraph_workflows/artifacts/archive/79ded2af/4/: thought.md
langgraph_workflows/artifacts/archive/8b9129cf/0/: analysis.json
langgraph_workflows/artifacts/archive/8b9129cf/1/: analysis.json  search.md
langgraph_workflows/artifacts/archive/8b9129cf/2/: search.md
langgraph_workflows/docs/: Agent Debate and Idea Synthesis.md  LangGraph vs. n8n for Agents.md
langgraph_workflows/requirements/: persistence.md
langgraph_workflows/src/graphs/: idea.py
langgraph_workflows/src/prompts/: idea_analysis.yaml  idea_researcher.yaml
langgraph_workflows/src/state/: idea.py
langgraph_workflows/src/tools/: prompt_manager.py
langgraph_workflows/tutorials/: agent3.ipynb  exercise3.ipynb  exercise4.ipynb
notion_sync/: .sync_state.json  README.md  pyproject.toml
notion_sync/src/: sync.py
(+324 files in other folders)
