[project]
name = "agents"
version = "0.1.0"
description = "The project contains the code for the agents that will be used to automate tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepeval>=3.8.4",
    "ipython>=9.10.0",
    "jinja2>=3.1.6",
    "langchain-google-genai>=2.1.4",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.ruff]
line-length = 200
select = ["E", "F", "I"] # Error, Flake, Isort
