[project]
name = "notion-sync"
version = "0.1.0"
description = "Sync Notion 'Journal Entries' database to local Markdown files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notion-client",
    "python-dotenv",
    "notion2md",
    "google-genai>=1.73.1",
    "pydantic>=2.13.2",
    "python-frontmatter>=1.1.0",
]

[tool.uv]
package = false
